force-app/main/default/objects/Message__c/fields/Completion_Token_Price__c.field-meta.xml
<CustomField>
    <fullName>Completion_Token_Price__c</fullName>
    <formula>IF(
     CONTAINS( Model__c ,&quot;gpt-3&quot;),
     0.002,
     0.06
)*(Completion_Tokens__c/1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Token Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>