force-app/main/default/objects/Message__c/fields/Function_Arguments__c.field-meta.xml
<CustomField>
    <fullName>Function_Arguments__c</fullName>
    <label>Function Arguments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>