force-app/main/default/objects/Message__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Model used to generate completion</description>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>