force-app/main/default/objects/Message__c/fields/Prompt_Token_Price__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Token_Price__c</fullName>
    <formula>IF( 
    CONTAINS( Model__c ,&quot;gpt-3&quot;),
    0.0015,
    0.03
)*(Prompt_Tokens__c/1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prompt Token Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>