force-app/main/default/objects/Message__c/fields/Thread__c.field-meta.xml
<CustomField>
    <fullName>Thread__c</fullName>
    <label>Thread</label>
    <referenceTo>Chat__c</referenceTo>
    <relationshipLabel>Thread</relationshipLabel>
    <relationshipName>Thread</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>